update FontFace thru Libertinus

--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -21,9 +21,9 @@
 %\ErewhonFonts
 %\FiraFonts
 %\GFSNeohellenicFonts
-\KpFonts
+%\KpFonts
 %\LatinModernFonts
-%\LibertinusFonts
+\LibertinusFonts
 %\BonumFonts
 %\PagellaFonts
 %\ScholaFonts
