updated faces for all current font collections

--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -23,13 +23,13 @@
 %\GFSNeohellenicFonts
 %\KpFonts
 %\LatinModernFonts
-\LibertinusFonts
+%\LibertinusFonts
+%\STIXTwoFonts
 %\BonumFonts
 %\PagellaFonts
 %\ScholaFonts
 %\TermesFonts
-%\XITSFonts
-%\STIXTwoFonts
+\XITSFonts
 
 \NewDocumentCommand{\ShowFontA}{m m m}{%
 {#1\fontseries{#2}\fontshape{#3}\selectfont%
