--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -1104,24 +1104,46 @@ RawFeature={
 % and distributed under the SIL Open Font License, Version 1.1
 
 \NewDocumentCommand {\STIXTwoMainFont} {} {
-\setmainfont{STIXTwoText-Regular.otf}[
+\setmainfont{STIXTwoText}[
+Path,
 Extension=.otf,
-UprightFont=STIXTwoText-Regular,
-ItalicFont=STIXTwoText-Italic,
-BoldFont=STIXTwoText-Bold,
-BoldItalicFont=STIXTwoText-BoldItalic,
-SlantedFont=STIXTwoText-Italic,
-BoldSlantedFont=STIXTwoText-BoldItalic,
-FontFace={xl}{n}{STIXTwoText-Regular},
-FontFace={xl}{it}{STIXTwoText-Italic},
-FontFace={li}{n}{STIXTwoText-Regular},
-FontFace={li}{it}{STIXTwoText-Italic},
-FontFace={md}{n}{STIXTwoText-Medium},
-FontFace={md}{it}{STIXTwoText-MediumItalic},
-FontFace={sb}{n}{STIXTwoText-SemiBold},
-FontFace={sb}{it}{STIXTwoText-SemiBoldItalic},
-FontFace={xb}{n}{STIXTwoText-Bold},
-FontFace={xb}{it}{STIXTwoText-BoldItalic}, 
+UprightFont=*-Regular,
+ItalicFont=*-Italic,
+BoldFont=*-Bold,
+BoldItalicFont=*-BoldItalic,
+SlantedFont=*-Italic,
+BoldSlantedFont=*-BoldItalic,
+%
+FontFace={ul}{n}{*-Regular},
+FontFace={el}{n}{*-Regular},
+FontFace={l}{n}{*-Regular},
+FontFace={sl}{n}{*-Regular},
+FontFace={m}{n}{*-Medium},
+FontFace={sb}{n}{*-SemiBold},
+FontFace={b}{n}{*-Bold},
+FontFace={eb}{n}{*-Bold},
+FontFace={ub}{n}{*-Bold},
+%
+FontFace={ul}{it}{*-Italic},
+FontFace={el}{it}{*-Italic},
+FontFace={l}{it}{*-Italic},
+FontFace={sl}{it}{*-Italic},
+FontFace={m}{it}{*-MediumItalic},
+FontFace={sb}{it}{*-SemiBoldItalic},
+FontFace={b}{it}{*-BoldItalic},
+FontFace={eb}{it}{*-BoldItalic},
+FontFace={ub}{it}{*-BoldItalic},
+%
+FontFace={ul}{sl}{*-Italic},
+FontFace={el}{sl}{*-Italic},
+FontFace={l}{sl}{*-Italic},
+FontFace={sl}{sl}{*-Italic},
+FontFace={m}{sl}{*-MediumItalic},
+FontFace={sb}{sl}{*-SemiBoldItalic},
+FontFace={b}{sl}{*-BoldItalic},
+FontFace={eb}{sl}{*-BoldItalic},
+FontFace={ub}{sl}{*-BoldItalic},
+%
 Numbers={OldStyle,Proportional},
 RawFeature={
 +cv01, % horizontal lambda-bar
@@ -1140,25 +1162,51 @@ RawFeature={
 % TeX Gyre Bonum <- URW Bookman L <- Bookman Old Style
 
 \NewDocumentCommand {\BonumMainFont} {} {
- \setmainfont{texgyrebonum-regular.otf}[
+ \setmainfont{texgyrebonum}[
+Path,
 Extension=.otf,
-UprightFont=texgyrebonum-regular,
-ItalicFont=texgyrebonum-italic,
-BoldFont=texgyrebonum-bold,
-BoldItalicFont=texgyrebonum-bolditalic,
-SlantedFont=texgyrebonum-italic,
-BoldSlantedFont=texgyrebonum-bolditalic,
-FontFace={xl}{n}{texgyrebonum-regular},
-FontFace={xl}{it}{texgyrebonum-italic},
-FontFace={li}{n}{texgyrebonum-regular},
-FontFace={li}{it}{texgyrebonum-italic},
-FontFace={md}{n}{texgyrebonum-regular},
-FontFace={md}{it}{texgyrebonum-italic},
-FontFace={sb}{n}{texgyrebonum-bold},
-FontFace={sb}{it}{texgyrebonum-bolditalic},
-FontFace={xb}{n}{texgyrebonum-bold},
-FontFace={xb}{it}{texgyrebonum-bolditalic}, 
-Numbers={OldStyle,Proportional},
+UprightFont=*-regular,
+ItalicFont=*-italic,
+BoldFont=*-bold,
+BoldItalicFont=*-bolditalic,
+SlantedFont=*-italic,
+BoldSlantedFont=*-bolditalic,
+%
+% SmallCapsFont=*-regular,
+% SmallCapsFeatures={
+% %Letters=SmallCaps,
+% },
+%
+FontFace={ul}{n}{*-regular},
+FontFace={el}{n}{*-regular},
+FontFace={l}{n}{*-regular},
+FontFace={sl}{n}{*-regular},
+FontFace={m}{n}{*-regular},
+FontFace={sb}{n}{*-bold},
+FontFace={b}{n}{*-bold},
+FontFace={eb}{n}{*-bold},
+FontFace={ub}{n}{*-bold},
+%
+FontFace={ul}{it}{*-italic},
+FontFace={el}{it}{*-italic},
+FontFace={l}{it}{*-italic},
+FontFace={sl}{it}{*-italic},
+FontFace={m}{it}{*-italic},
+FontFace={sb}{it}{*-bolditalic},
+FontFace={b}{it}{*-bolditalic},
+FontFace={eb}{it}{*-bolditalic},
+FontFace={ub}{it}{*-bolditalic},
+%
+FontFace={ul}{sl}{*-italic},
+FontFace={el}{sl}{*-italic},
+FontFace={l}{sl}{*-italic},
+FontFace={sl}{sl}{*-italic},
+FontFace={m}{sl}{*-italic},
+FontFace={sb}{sl}{*-bolditalic},
+FontFace={b}{sl}{*-bolditalic},
+FontFace={eb}{sl}{*-bolditalic},
+FontFace={ub}{sl}{*-bolditalic},
+%
 Ligatures={Common,TeX},
 Scale=1.0,
 RawFeature={
@@ -1175,25 +1223,51 @@ StylisticSet={
 % TeX Gyre Pagella <- URW Palladio L <- Palatino
 
 \NewDocumentCommand {\PagellaMainFont} {} {
- \setmainfont{texgyrepagella-regular.otf}[
+ \setmainfont{texgyrepagella}[
+Path,
 Extension=.otf,
-UprightFont=texgyrepagella-regular,
-ItalicFont=texgyrepagella-italic,
-BoldFont=texgyrepagella-bold,
-BoldItalicFont=texgyrepagella-bolditalic,
-SlantedFont=texgyrepagella-italic,
-BoldSlantedFont=texgyrepagella-bolditalic,
-FontFace={xl}{n}{texgyrepagella-regular},
-FontFace={xl}{it}{texgyrepagella-italic},
-FontFace={li}{n}{texgyrepagella-regular},
-FontFace={li}{it}{texgyrepagella-italic},
-FontFace={md}{n}{texgyrepagella-regular},
-FontFace={md}{it}{texgyrepagella-italic},
-FontFace={sb}{n}{texgyrepagella-bold},
-FontFace={sb}{it}{texgyrepagella-bolditalic},
-FontFace={xb}{n}{texgyrepagella-bold},
-FontFace={xb}{it}{texgyrepagella-bolditalic}, 
-Numbers={OldStyle,Proportional},
+UprightFont=*-regular,
+ItalicFont=*-italic,
+BoldFont=*-bold,
+BoldItalicFont=*-bolditalic,
+SlantedFont=*-italic,
+BoldSlantedFont=*-bolditalic,
+%
+% SmallCapsFont=*-regular,
+% SmallCapsFeatures={
+% %Letters=SmallCaps,
+% },
+%
+FontFace={ul}{n}{*-regular},
+FontFace={el}{n}{*-regular},
+FontFace={l}{n}{*-regular},
+FontFace={sl}{n}{*-regular},
+FontFace={m}{n}{*-regular},
+FontFace={sb}{n}{*-bold},
+FontFace={b}{n}{*-bold},
+FontFace={eb}{n}{*-bold},
+FontFace={ub}{n}{*-bold},
+%
+FontFace={ul}{it}{*-italic},
+FontFace={el}{it}{*-italic},
+FontFace={l}{it}{*-italic},
+FontFace={sl}{it}{*-italic},
+FontFace={m}{it}{*-italic},
+FontFace={sb}{it}{*-bolditalic},
+FontFace={b}{it}{*-bolditalic},
+FontFace={eb}{it}{*-bolditalic},
+FontFace={ub}{it}{*-bolditalic},
+%
+FontFace={ul}{sl}{*-italic},
+FontFace={el}{sl}{*-italic},
+FontFace={l}{sl}{*-italic},
+FontFace={sl}{sl}{*-italic},
+FontFace={m}{sl}{*-italic},
+FontFace={sb}{sl}{*-bolditalic},
+FontFace={b}{sl}{*-bolditalic},
+FontFace={eb}{sl}{*-bolditalic},
+FontFace={ub}{sl}{*-bolditalic},
+%
 Ligatures={Common,TeX},
 Scale=1.0,
 RawFeature={
@@ -1210,25 +1284,51 @@ StylisticSet={
 % TeX Gyre Schola <- URW Century Schoolbook L <- Century Schoolbook
 
 \NewDocumentCommand {\ScholaMainFont} {} {
- \setmainfont{texgyreschola-regular.otf}[
+ \setmainfont{texgyreschola}[
+Path,
 Extension=.otf,
-UprightFont=texgyreschola-regular,
-ItalicFont=texgyreschola-italic,
-BoldFont=texgyreschola-bold,
-BoldItalicFont=texgyreschola-bolditalic,
-SlantedFont=texgyreschola-italic,
-BoldSlantedFont=texgyreschola-bolditalic,
-FontFace={xl}{n}{texgyreschola-regular},
-FontFace={xl}{it}{texgyreschola-italic},
-FontFace={li}{n}{texgyreschola-regular},
-FontFace={li}{it}{texgyreschola-italic},
-FontFace={md}{n}{texgyreschola-regular},
-FontFace={md}{it}{texgyreschola-italic},
-FontFace={sb}{n}{texgyreschola-bold},
-FontFace={sb}{it}{texgyreschola-bolditalic},
-FontFace={xb}{n}{texgyreschola-bold},
-FontFace={xb}{it}{texgyreschola-bolditalic}, 
-Numbers={OldStyle,Proportional},
+UprightFont=*-regular,
+ItalicFont=*-italic,
+BoldFont=*-bold,
+BoldItalicFont=*-bolditalic,
+SlantedFont=*-italic,
+BoldSlantedFont=*-bolditalic,
+%
+% SmallCapsFont=*-regular,
+% SmallCapsFeatures={
+% %Letters=SmallCaps,
+% },
+%
+FontFace={ul}{n}{*-regular},
+FontFace={el}{n}{*-regular},
+FontFace={l}{n}{*-regular},
+FontFace={sl}{n}{*-regular},
+FontFace={m}{n}{*-regular},
+FontFace={sb}{n}{*-bold},
+FontFace={b}{n}{*-bold},
+FontFace={eb}{n}{*-bold},
+FontFace={ub}{n}{*-bold},
+%
+FontFace={ul}{it}{*-italic},
+FontFace={el}{it}{*-italic},
+FontFace={l}{it}{*-italic},
+FontFace={sl}{it}{*-italic},
+FontFace={m}{it}{*-italic},
+FontFace={sb}{it}{*-bolditalic},
+FontFace={b}{it}{*-bolditalic},
+FontFace={eb}{it}{*-bolditalic},
+FontFace={ub}{it}{*-bolditalic},
+%
+FontFace={ul}{sl}{*-italic},
+FontFace={el}{sl}{*-italic},
+FontFace={l}{sl}{*-italic},
+FontFace={sl}{sl}{*-italic},
+FontFace={m}{sl}{*-italic},
+FontFace={sb}{sl}{*-bolditalic},
+FontFace={b}{sl}{*-bolditalic},
+FontFace={eb}{sl}{*-bolditalic},
+FontFace={ub}{sl}{*-bolditalic},
+%
 Ligatures={Common,TeX},
 Scale=1.0,
 RawFeature={
@@ -1245,25 +1345,51 @@ StylisticSet={
 % TeX Gyre Termes <- URW Nimbus Roman No9 L <- Times New Roman
 
 \NewDocumentCommand {\TermesMainFont} {} {
- \setmainfont{texgyretermes-regular.otf}[
+ \setmainfont{texgyretermes}[
+Path,
 Extension=.otf,
-UprightFont=texgyretermes-regular,
-ItalicFont=texgyretermes-italic,
-BoldFont=texgyretermes-bold,
-BoldItalicFont=texgyretermes-bolditalic,
-SlantedFont=texgyretermes-italic,
-BoldSlantedFont=texgyretermes-bolditalic,
-FontFace={xl}{n}{texgyretermes-regular},
-FontFace={xl}{it}{texgyretermes-italic},
-FontFace={li}{n}{texgyretermes-regular},
-FontFace={li}{it}{texgyretermes-italic},
-FontFace={md}{n}{texgyretermes-regular},
-FontFace={md}{it}{texgyretermes-italic},
-FontFace={sb}{n}{texgyretermes-bold},
-FontFace={sb}{it}{texgyretermes-bolditalic},
-FontFace={xb}{n}{texgyretermes-bold},
-FontFace={xb}{it}{texgyretermes-bolditalic}, 
-Numbers={OldStyle,Proportional},
+UprightFont=*-regular,
+ItalicFont=*-italic,
+BoldFont=*-bold,
+BoldItalicFont=*-bolditalic,
+SlantedFont=*-italic,
+BoldSlantedFont=*-bolditalic,
+%
+% SmallCapsFont=*-regular,
+% SmallCapsFeatures={
+% %Letters=SmallCaps,
+% },
+%
+FontFace={ul}{n}{*-regular},
+FontFace={el}{n}{*-regular},
+FontFace={l}{n}{*-regular},
+FontFace={sl}{n}{*-regular},
+FontFace={m}{n}{*-regular},
+FontFace={sb}{n}{*-bold},
+FontFace={b}{n}{*-bold},
+FontFace={eb}{n}{*-bold},
+FontFace={ub}{n}{*-bold},
+%
+FontFace={ul}{it}{*-italic},
+FontFace={el}{it}{*-italic},
+FontFace={l}{it}{*-italic},
+FontFace={sl}{it}{*-italic},
+FontFace={m}{it}{*-italic},
+FontFace={sb}{it}{*-bolditalic},
+FontFace={b}{it}{*-bolditalic},
+FontFace={eb}{it}{*-bolditalic},
+FontFace={ub}{it}{*-bolditalic},
+%
+FontFace={ul}{sl}{*-italic},
+FontFace={el}{sl}{*-italic},
+FontFace={l}{sl}{*-italic},
+FontFace={sl}{sl}{*-italic},
+FontFace={m}{sl}{*-italic},
+FontFace={sb}{sl}{*-bolditalic},
+FontFace={b}{sl}{*-bolditalic},
+FontFace={eb}{sl}{*-bolditalic},
+FontFace={ub}{sl}{*-bolditalic},
+%
 Ligatures={Common,TeX},
 Scale=1.0,
 RawFeature={
@@ -1284,23 +1410,44 @@ StylisticSet={
 
 \NewDocumentCommand {\XITSMainFont} {} {
 \setmainfont{XITS}[
+Path,
 Extension=.otf,
-UprightFont=XITS-Regular,
-ItalicFont=XITS-Italic,
-BoldFont=XITS-Bold,
-BoldItalicFont=XITS-BoldItalic,
-SlantedFont=XITS-Italic,
-BoldSlantedFont=XITS-BoldItalic,
-FontFace={xl}{n}{XITS-Regular},
-FontFace={xl}{it}{XITS-Italic},
-FontFace={li}{n}{XITS-Regular},
-FontFace={li}{it}{XITS-Italic},
-FontFace={md}{n}{XITS-Regular},
-FontFace={md}{it}{XITS-Italic},
-FontFace={sb}{n}{XITS-Bold},
-FontFace={sb}{it}{XITS-BoldItalic},
-FontFace={xb}{n}{XITS-Bold},
-FontFace={xb}{it}{XITS-BoldItalic}, 
+UprightFont=*-Regular,
+ItalicFont=*-Italic,
+BoldFont=*-Bold,
+BoldItalicFont=*-BoldItalic,
+SlantedFont=*-Italic,
+BoldSlantedFont=*-BoldItalic,
+%
+FontFace={ul}{n}{*-Regular},
+FontFace={el}{n}{*-Regular},
+FontFace={l}{n}{*-Regular},
+FontFace={sl}{n}{*-Regular},
+FontFace={m}{n}{*-Regular},
+FontFace={sb}{n}{*-Bold},
+FontFace={b}{n}{*-Bold},
+FontFace={eb}{n}{*-Bold},
+FontFace={ub}{n}{*-Bold},
+%
+FontFace={ul}{it}{*-Italic},
+FontFace={el}{it}{*-Italic},
+FontFace={l}{it}{*-Italic},
+FontFace={sl}{it}{*-Italic},
+FontFace={m}{it}{*-Italic},
+FontFace={sb}{it}{*-BoldItalic},
+FontFace={b}{it}{*-BoldItalic},
+FontFace={eb}{it}{*-BoldItalic},
+FontFace={ub}{it}{*-BoldItalic},
+%
+FontFace={ul}{sl}{*-Italic},
+FontFace={el}{sl}{*-Italic},
+FontFace={l}{sl}{*-Italic},
+FontFace={sl}{sl}{*-Italic},
+FontFace={m}{sl}{*-Italic},
+FontFace={sb}{sl}{*-BoldItalic},
+FontFace={b}{sl}{*-BoldItalic},
+FontFace={eb}{sl}{*-BoldItalic},
+FontFace={ub}{sl}{*-BoldItalic},
 % StylisticSet = {
 % 6,% long tailed Q
 % },
@@ -1729,26 +1876,53 @@ RawFeature={
 %-----------------------------------------------------------------
 % TeX Gyre Adventor <-  URW Gothic L <- ITC Avant Garde Gothic
 \NewDocumentCommand {\AdventorSansFont} {} {
- \setsansfont{texgyreadventor-regular.otf}[
+\setsansfont{texgyreadventor}[
+Path,
 Extension=.otf,
-UprightFont=texgyreadventor-regular,
-ItalicFont=texgyreadventor-italic,
-BoldFont=texgyreadventor-bold,
-BoldItalicFont=texgyreadventor-bolditalic,
-SlantedFont=texgyreadventor-italic,
-BoldSlantedFont=texgyreadventor-bolditalic,
-FontFace={xl}{n}{texgyreadventor-regular},
-FontFace={xl}{it}{texgyreadventor-italic},
-FontFace={li}{n}{texgyreadventor-regular},
-FontFace={li}{it}{texgyreadventor-italic},
-FontFace={md}{n}{texgyreadventor-regular},
-FontFace={md}{it}{texgyreadventor-italic},
-FontFace={sb}{n}{texgyreadventor-bold},
-FontFace={sb}{it}{texgyreadventor-bolditalic},
-FontFace={xb}{n}{texgyreadventor-bold},
-FontFace={xb}{it}{texgyreadventor-bolditalic}, 
-Numbers={OldStyle,Proportional},
+UprightFont=*-regular,
+ItalicFont=*-italic,
+BoldFont=*-bold,
+BoldItalicFont=*-bolditalic,
+SlantedFont=*-italic,
+BoldSlantedFont=*-bolditalic,
+%
+% SmallCapsFont=*-regular,
+% SmallCapsFeatures={
+% %Letters=SmallCaps,
+% },
+%
+FontFace={ul}{n}{*-regular},
+FontFace={el}{n}{*-regular},
+FontFace={l}{n}{*-regular},
+FontFace={sl}{n}{*-regular},
+FontFace={m}{n}{*-regular},
+FontFace={sb}{n}{*-bold},
+FontFace={b}{n}{*-bold},
+FontFace={eb}{n}{*-bold},
+FontFace={ub}{n}{*-bold},
+%
+FontFace={ul}{it}{*-italic},
+FontFace={el}{it}{*-italic},
+FontFace={l}{it}{*-italic},
+FontFace={sl}{it}{*-italic},
+FontFace={m}{it}{*-italic},
+FontFace={sb}{it}{*-bolditalic},
+FontFace={b}{it}{*-bolditalic},
+FontFace={eb}{it}{*-bolditalic},
+FontFace={ub}{it}{*-bolditalic},
+%
+FontFace={ul}{sl}{*-italic},
+FontFace={el}{sl}{*-italic},
+FontFace={l}{sl}{*-italic},
+FontFace={sl}{sl}{*-italic},
+FontFace={m}{sl}{*-italic},
+FontFace={sb}{sl}{*-bolditalic},
+FontFace={b}{sl}{*-bolditalic},
+FontFace={eb}{sl}{*-bolditalic},
+FontFace={ub}{sl}{*-bolditalic},
+%
 Ligatures={Common,TeX},
+Scale=1.0,
 RawFeature={
 +zero, % slashed zero
 },
@@ -1761,28 +1935,56 @@ StylisticSet={
 
 %-----------------------------------------------------------------
 % TeX Gyre Heros <- URW Nimbus Sans L <- Helvetica
+% TODO: merge Heros and Heroscn?
 
 \NewDocumentCommand {\HerosSansFont} {} {
- \setsansfont{texgyreheros-regular.otf}[
+\setsansfont{texgyreheros}[
+Path,
 Extension=.otf,
-UprightFont=texgyreheros-regular,
-ItalicFont=texgyreheros-italic,
-BoldFont=texgyreheros-bold,
-BoldItalicFont=texgyreheros-bolditalic,
-SlantedFont=texgyreheros-italic,
-BoldSlantedFont=texgyreheros-bolditalic,
-FontFace={xl}{n}{texgyreheros-regular},
-FontFace={xl}{it}{texgyreheros-italic},
-FontFace={li}{n}{texgyreheros-regular},
-FontFace={li}{it}{texgyreheros-italic},
-FontFace={md}{n}{texgyreheros-regular},
-FontFace={md}{it}{texgyreheros-italic},
-FontFace={sb}{n}{texgyreheros-bold},
-FontFace={sb}{it}{texgyreheros-bolditalic},
-FontFace={xb}{n}{texgyreheros-bold},
-FontFace={xb}{it}{texgyreheros-bolditalic}, 
-Numbers={OldStyle,Proportional},
+UprightFont=*-regular,
+ItalicFont=*-italic,
+BoldFont=*-bold,
+BoldItalicFont=*-bolditalic,
+SlantedFont=*-italic,
+BoldSlantedFont=*-bolditalic,
+%
+% SmallCapsFont=*-regular,
+% SmallCapsFeatures={
+% %Letters=SmallCaps,
+% },
+%
+FontFace={ul}{n}{*-regular},
+FontFace={el}{n}{*-regular},
+FontFace={l}{n}{*-regular},
+FontFace={sl}{n}{*-regular},
+FontFace={m}{n}{*-regular},
+FontFace={sb}{n}{*-bold},
+FontFace={b}{n}{*-bold},
+FontFace={eb}{n}{*-bold},
+FontFace={ub}{n}{*-bold},
+%
+FontFace={ul}{it}{*-italic},
+FontFace={el}{it}{*-italic},
+FontFace={l}{it}{*-italic},
+FontFace={sl}{it}{*-italic},
+FontFace={m}{it}{*-italic},
+FontFace={sb}{it}{*-bolditalic},
+FontFace={b}{it}{*-bolditalic},
+FontFace={eb}{it}{*-bolditalic},
+FontFace={ub}{it}{*-bolditalic},
+%
+FontFace={ul}{sl}{*-italic},
+FontFace={el}{sl}{*-italic},
+FontFace={l}{sl}{*-italic},
+FontFace={sl}{sl}{*-italic},
+FontFace={m}{sl}{*-italic},
+FontFace={sb}{sl}{*-bolditalic},
+FontFace={b}{sl}{*-bolditalic},
+FontFace={eb}{sl}{*-bolditalic},
+FontFace={ub}{sl}{*-bolditalic},
+%
 Ligatures={Common,TeX},
+Scale=1.0,
 RawFeature={
 +zero, % slashed zero
 },
@@ -1794,26 +1996,53 @@ StylisticSet={
 }
 
 \NewDocumentCommand {\HerosCondensedSansFont} {} {
- \setsansfont{texgyreheroscn-regular.otf}[
+\setsansfont{texgyreheroscn-regular.otf}[
+Path,
 Extension=.otf,
-UprightFont=texgyreheroscn-regular,
-ItalicFont=texgyreheroscn-italic,
-BoldFont=texgyreheroscn-bold,
-BoldItalicFont=texgyreheroscn-bolditalic,
-SlantedFont=texgyreheroscn-italic,
-BoldSlantedFont=texgyreheroscn-bolditalic,
-FontFace={xl}{n}{texgyreheroscn-regular},
-FontFace={xl}{it}{texgyreheroscn-italic},
-FontFace={li}{n}{texgyreheroscn-regular},
-FontFace={li}{it}{texgyreheroscn-italic},
-FontFace={md}{n}{texgyreheroscn-regular},
-FontFace={md}{it}{texgyreheroscn-italic},
-FontFace={sb}{n}{texgyreheroscn-bold},
-FontFace={sb}{it}{texgyreheroscn-bolditalic},
-FontFace={xb}{n}{texgyreheroscn-bold},
-FontFace={xb}{it}{texgyreheroscn-bolditalic}, 
-Numbers={OldStyle,Proportional},
+UprightFont=*-regular,
+ItalicFont=*-italic,
+BoldFont=*-bold,
+BoldItalicFont=*-bolditalic,
+SlantedFont=*-italic,
+BoldSlantedFont=*-bolditalic,
+%
+% SmallCapsFont=*-regular,
+% SmallCapsFeatures={
+% %Letters=SmallCaps,
+% },
+%
+FontFace={ul}{n}{*-regular},
+FontFace={el}{n}{*-regular},
+FontFace={l}{n}{*-regular},
+FontFace={sl}{n}{*-regular},
+FontFace={m}{n}{*-regular},
+FontFace={sb}{n}{*-bold},
+FontFace={b}{n}{*-bold},
+FontFace={eb}{n}{*-bold},
+FontFace={ub}{n}{*-bold},
+%
+FontFace={ul}{it}{*-italic},
+FontFace={el}{it}{*-italic},
+FontFace={l}{it}{*-italic},
+FontFace={sl}{it}{*-italic},
+FontFace={m}{it}{*-italic},
+FontFace={sb}{it}{*-bolditalic},
+FontFace={b}{it}{*-bolditalic},
+FontFace={eb}{it}{*-bolditalic},
+FontFace={ub}{it}{*-bolditalic},
+%
+FontFace={ul}{sl}{*-italic},
+FontFace={el}{sl}{*-italic},
+FontFace={l}{sl}{*-italic},
+FontFace={sl}{sl}{*-italic},
+FontFace={m}{sl}{*-italic},
+FontFace={sb}{sl}{*-bolditalic},
+FontFace={b}{sl}{*-bolditalic},
+FontFace={eb}{sl}{*-bolditalic},
+FontFace={ub}{sl}{*-bolditalic},
+%
 Ligatures={Common,TeX},
+Scale=1.0,
 RawFeature={
 +zero, % slashed zero
 },
@@ -2295,26 +2524,53 @@ RawFeature={
 % TeX Gyre Cursor <- URW Nimbus Mono L <- Courier
 
 \NewDocumentCommand {\CursorMonoFont} {} {
- \setmonofont{texgyrecursor-regular.otf}[
+\setmonofont{texgyrecursor}[
+Path,
 Extension=.otf,
-UprightFont=texgyrecursor-regular,
-ItalicFont=texgyrecursor-italic,
-BoldFont=texgyrecursor-bold,
-BoldItalicFont=texgyrecursor-bolditalic,
-SlantedFont=texgyrecursor-italic,
-BoldSlantedFont=texgyrecursor-bolditalic,
-FontFace={xl}{n}{texgyrecursor-regular},
-FontFace={xl}{it}{texgyrecursor-italic},
-FontFace={li}{n}{texgyrecursor-regular},
-FontFace={li}{it}{texgyrecursor-italic},
-FontFace={md}{n}{texgyrecursor-regular},
-FontFace={md}{it}{texgyrecursor-italic},
-FontFace={sb}{n}{texgyrecursor-bold},
-FontFace={sb}{it}{texgyrecursor-bolditalic},
-FontFace={xb}{n}{texgyrecursor-bold},
-FontFace={xb}{it}{texgyrecursor-bolditalic}, 
-Numbers={OldStyle,Proportional},
+UprightFont=*-regular,
+ItalicFont=*-italic,
+BoldFont=*-bold,
+BoldItalicFont=*-bolditalic,
+SlantedFont=*-italic,
+BoldSlantedFont=*-bolditalic,
+%
+% SmallCapsFont=*-regular,
+% SmallCapsFeatures={
+% %Letters=SmallCaps,
+% },
+%
+FontFace={ul}{n}{*-regular},
+FontFace={el}{n}{*-regular},
+FontFace={l}{n}{*-regular},
+FontFace={sl}{n}{*-regular},
+FontFace={m}{n}{*-regular},
+FontFace={sb}{n}{*-bold},
+FontFace={b}{n}{*-bold},
+FontFace={eb}{n}{*-bold},
+FontFace={ub}{n}{*-bold},
+%
+FontFace={ul}{it}{*-italic},
+FontFace={el}{it}{*-italic},
+FontFace={l}{it}{*-italic},
+FontFace={sl}{it}{*-italic},
+FontFace={m}{it}{*-italic},
+FontFace={sb}{it}{*-bolditalic},
+FontFace={b}{it}{*-bolditalic},
+FontFace={eb}{it}{*-bolditalic},
+FontFace={ub}{it}{*-bolditalic},
+%
+FontFace={ul}{sl}{*-italic},
+FontFace={el}{sl}{*-italic},
+FontFace={l}{sl}{*-italic},
+FontFace={sl}{sl}{*-italic},
+FontFace={m}{sl}{*-italic},
+FontFace={sb}{sl}{*-bolditalic},
+FontFace={b}{sl}{*-bolditalic},
+FontFace={eb}{sl}{*-bolditalic},
+FontFace={ub}{sl}{*-bolditalic},
+%
 Ligatures={Common,TeX},
+Scale=1.0,
 RawFeature={
 +zero, % slashed zero
 },
@@ -2490,57 +2746,6 @@ Numbers={OldStyle,Proportional},
 \setmathfont{KpMath-Regular.otf}[
 Path,
 Extension=.otf,
-% UprightFont=*-Regular,
-% % ItalicFont=*-Italic,
-% BoldFont=*-Bold,
-% % BoldItalicFont=*-BoldItalic,
-% % SlantedFont=*-Italic,
-% % BoldSlantedFont=*-BoldItalic,
-% %SmallcapsFont=*SC,
-% % %FontFace={ul}{sc}{*SC-Hairline},
-% % FontFace={ul}{sc}{*SC-Thin},
-% % FontFace={el}{sc}{*SC-Extralight},
-% % FontFace={l}{sc}{*SC-Light},
-% % FontFace={sl}{sc}{*SC-Semilight},
-% % %FontFace={m}{sc}{*SC-Book},
-% % FontFace={m}{sc}{*SC-Regular},
-% % %FontFace={m}{sc}{*SC-Medium},
-% % FontFace={sb}{sc}{*SC-Semibold},
-% % FontFace={b}{sc}{*SC-Bold},
-% % FontFace={eb}{sc}{*SC-Ultrabold},
-% % FontFace={ub}{sc}{*SC-Heavy},
-% % %FontFace={ub}{sc}{*SC-Black},
-% %
-% FontFace={ul}{n}{*-Light},
-% FontFace={el}{n}{*-Light},
-% FontFace={l}{n}{*-Light},
-% FontFace={sl}{n}{*-Regular},
-% FontFace={m}{n}{*-Regular},
-% FontFace={sb}{n}{*-SemiBold},
-% FontFace={b}{n}{*-Bold},
-% FontFace={eb}{n}{*-Bold},
-% FontFace={ub}{n}{*-Bold},
-% %
-% % FontFace={ul}{it}{*-LightItalic},
-% % FontFace={el}{it}{*-LightItalic},
-% % FontFace={l}{it}{*-LightItalic},
-% % FontFace={sl}{it}{*-Italic},
-% % FontFace={m}{it}{*-Italic},
-% % FontFace={sb}{it}{*-SemiBoldItalic},
-% % FontFace={b}{it}{*-BoldItalic},
-% % FontFace={eb}{it}{*-BoldItalic},
-% % FontFace={ub}{it}{*-Italic},
-% % %
-% % FontFace={ul}{sl}{*-LightItalic},
-% % FontFace={el}{sl}{*-LightItalic},
-% % FontFace={l}{sl}{*-LightItalic},
-% % FontFace={sl}{sl}{*-Italic},
-% % FontFace={m}{sl}{*-Italic},
-% % FontFace={sb}{sl}{*-SemiBoldItalic},
-% % FontFace={b}{sl}{*-BoldItalic},
-% % FontFace={eb}{sl}{*-BoldItalic},
-% % FontFace={ub}{sl}{*-Italic},
-% %
 Numbers={OldStyle,Proportional},
 StylisticSet={
 1, % simpler script capitals
@@ -2641,12 +2846,12 @@ Ligatures={Common,TeX},
 % Licensing for original dejavu fonts dubious
 % non-math dejavu fonts don't seem to be available in otf
 
-% \NewDocumentCommand {\DejaVuMathFont} {} {
-% \setmathfont{texgyredejavu-math.otf}[
-% Numbers={OldStyle,Proportional},
-% Ligatures={Common,TeX},
-% ]
-% }
+\NewDocumentCommand {\DejaVuMathFont} {} {
+\setmathfont{texgyredejavu-math.otf}[
+Numbers={OldStyle,Proportional},
+Ligatures={Common,TeX},
+]
+}
 
 
 %-----------------------------------------------------------------
