--- a/tests/math.tex
+++ b/tests/math.tex
@@ -23,13 +23,13 @@
 %\GFSNeohellenicFonts
 %\KpFonts
 %\LatinModernFonts
-\LibertinusFonts
+%\LibertinusFonts
+%\STIXTwoFonts
 %\BonumFonts
 %\PagellaFonts
 %\ScholaFonts
 %\TermesFonts
-%\XITSFonts
-%\STIXTwoFonts
+\XITSFonts
 
 %-----------------------------------------------------------------
 \title{Font tests}
