remove self-invented face commands

--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -3170,14 +3170,14 @@ RawFeature={
 % TODO: redefine \mdseries instead
 % TODO: one command that maps face abbrev. to series and text cmds
  
-\DeclareRobustCommand{\xlseries}{\fontseries{xl}\selectfont}
-\DeclareTextFontCommand{\textxl}{\xlseries}
-\DeclareRobustCommand{\liseries}{\fontseries{li}\selectfont}
-\DeclareTextFontCommand{\textli}{\liseries}
-\DeclareRobustCommand{\sbseries}{\fontseries{sb}\selectfont}
-\DeclareTextFontCommand{\textsb}{\sbseries}
-\DeclareRobustCommand{\xbseries}{\fontseries{xb}\selectfont}
-\DeclareTextFontCommand{\textxb}{\xbseries}
+% \DeclareRobustCommand{\xlseries}{\fontseries{xl}\selectfont}
+% \DeclareTextFontCommand{\textxl}{\xlseries}
+% \DeclareRobustCommand{\liseries}{\fontseries{li}\selectfont}
+% \DeclareTextFontCommand{\textli}{\liseries}
+% \DeclareRobustCommand{\sbseries}{\fontseries{sb}\selectfont}
+% \DeclareTextFontCommand{\textsb}{\sbseries}
+% \DeclareRobustCommand{\xbseries}{\fontseries{xb}\selectfont}
+% \DeclareTextFontCommand{\textxb}{\xbseries}
 
 %-----------------------------------------------------------------
 % cjk fonts
